[package]
name = "systemet"
version = "0.1.0"
authors = ["Falk Höppner <falk@hoppner.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
reqwest = "0.10"
chrono = "0.4"
serde_repr = "0.1"
